# workspace

./: CMakeLists.txt  package.xml  workspace_macro.xacro
meshes/collision/: pedestal.stl  table.stl
meshes/visual/: pedestal.dae  table.dae
urdf/: workspace.xacro  workspace_macro.xacro
